--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "husky": "^9.1.6",
     "supabase": "^2.40.7",
     "tailwindcss": "^4",
     "typescript": "^5"
